<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <!--android:background="#59bef5"-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fargment_profile_illness_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>

    <ScrollView
        android:id="@+id/fragment_profile_symptom_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <!--android:background="@drawable/layer"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                >

                <RelativeLayout
                    android:layout_width="300dp"
                    android:layout_height="500dp"

                    android:layout_gravity="center"
                    android:background="@drawable/bodyimage">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="520dp"

                    >

                    <TextView
                        android:id="@+id/fragment_profile_symptom_tv_head_and_neck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
android:padding="20dp"

                        android:layout_marginLeft="550dp"
                        android:layout_marginTop="20dp"
                        android:text="Head and  Neck "
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_profile_symptom_tv_chest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fragment_profile_symptom_tv_head_and_neck"
                        android:layout_centerHorizontal="true"
                        android:padding="20dp"
                        android:layout_marginTop="60dp"
                        android:text="@string/chest"
                        android:textColor="#59bef5"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/fragment_profile_symptom_tv_stomach_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fragment_profile_symptom_tv_chest"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="stomach And \n Back"
                        android:textColor="#59bef5"
                        android:textStyle="bold"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/fragment_profile_symptom_tv_symptom_paralic_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginLeft="580dp"
                        android:text="@string/paleric_area"
                        android:layout_marginTop="300dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/fragment_profile_symptom_right_hand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="220dp"
                        android:layout_marginLeft="260dp"
                        android:padding="30dp"
                        android:text="@string/right_hand"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/fragment_profile_symptom_left_hand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="220dp"
                        android:layout_marginRight="270dp"
                        android:text="@string/left_hand"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/fragment_profile_symptom_tv_right_leg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="330dp"
                        android:text="@string/Right_lag"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/fragment_profile_symtom_tv_left_lag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="50dp"
                        android:layout_marginRight="350dp"
                        android:text="@string/left_lag"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:padding="20dp"/>

                </RelativeLayout>
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>