<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pager_calender_main_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ecc"
            android:layout_above="@+id/relative_pager"
            android:layout_below="@+id/toolbar">

        </androidx.recyclerview.widget.RecyclerView>


        <RelativeLayout

            android:layout_marginTop="170dp"
            android:layout_width="match_parent"
            android:id="@+id/relative_pager"
            android:layout_gravity="center"
            android:background="#fff"
            android:layout_height="110dp"
            >
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#e6e2e2"-->


                <!--/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reportlayout"
    android:layout_weight="1"
    android:orientation="vertical">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/reportsome"/>
    <TextView
            android:id="@+id/pager_calender_main_tv_report_something"

        android:layout_width="wrap_content"
        android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/report_something"
        android:paddingBottom="15dp"/>
</LinearLayout>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/attacehednote"/>
                <TextView


            android:id="@+id/pager_calendar_tv_attched_file_note"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
                    android:layout_weight="1"
            android:gravity="center"

android:paddingBottom="15dp"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
            android:text="@string/attached_note" />

            </LinearLayout>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/copysameday"/>
                    <TextView

                        android:layout_gravity="center"
android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:text="@string/copy_same_day" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


        <!--<RelativeLayout-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="@dimen/_150sdp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_below="@+id/relative_pager"-->
            <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:drawableLeft="@drawable/ic_copy"-->
            <!--android:text="@string/copy_same_day"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--</RelativeLayout>-->
    </FrameLayout>
</LinearLayout>